--- a/index.html
+++ b/index.html
@@ -2,8 +2,22 @@
 <html lang="">
 
 <head>
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-MDMJCLP2');</script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-7VKB4L89PX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-7VKB4L89PX');
+  </script>
   <meta charset="UTF-8">
-  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" href="favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
     content="Un hotel para quienes no viajan para escapar, sino para encontrarse. Somos tres catalanes, nómadas y emprendedores. Creamos Can Balam como un hogar lejos de casa, en medio de la magia de Puerto Escondido. Un lugar que no es un hotel, ni un hostal, ni un retiro. Es hotel híbrido, una experiencia viva. Olvídate de las preocupaciones en este gran alojamiento: ¡es un oasis de tranquilidad!">
@@ -11,6 +25,9 @@
 </head>
 
 <body>
+
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MDMJCLP2"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
 </body>
