--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="es-MX">
 
 <head>
   <!-- Google Tag Manager -->
@@ -16,12 +16,155 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
     gtag('config', 'G-7VKB4L89PX');
   </script>
+  
+  <!-- Meta tags básicos -->
   <meta charset="UTF-8">
-  <link rel="icon" href="favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description"
-    content="Un hotel para quienes no viajan para escapar, sino para encontrarse. Somos tres catalanes, nómadas y emprendedores. Creamos Can Balam como un hogar lejos de casa, en medio de la magia de Puerto Escondido. Un lugar que no es un hotel, ni un hostal, ni un retiro. Es hotel híbrido, una experiencia viva. Olvídate de las preocupaciones en este gran alojamiento: ¡es un oasis de tranquilidad!">
-  <title>Can Balam | No vengas a descansar. Ven a encontrarte</title>
+  <meta name="theme-color" content="#89ADC6">
+  
+  <!-- SEO Meta Tags -->
+  <title>Can Balam Hotel Puerto Escondido | Alojamiento Único en Oaxaca</title>
+  <meta name="description" content="Can Balam Hotel en Puerto Escondido, Oaxaca - Hotel boutique con actividades únicas: surf en Playa Zicatela, liberación de tortugas, bioluminiscencia, avistamiento de delfines, paellas catalanas y eco tours. Habitaciones cómodas, cocina compartida y roof top con vista al mar. Experiencia auténtica para viajeros aventureros en la costa mexicana.">
+  <meta name="keywords" content="hotel puerto escondido, can balam hotel, alojamiento puerto escondido oaxaca, hotel boutique puerto escondido, hospedaje puerto escondido, surf puerto escondido, playa zicatela hotel, liberación tortugas puerto escondido, bioluminiscencia oaxaca, avistamiento delfines puerto escondido, paellas puerto escondido, eco tour mazunte zipolite, cabalgata playa puerto escondido, yate huatulco, hotel con cocina compartida, roof top puerto escondido, actividades puerto escondido, turismo aventura oaxaca, hotel experiencias únicas, alojamiento catalanes puerto escondido, hotel networking puerto escondido, comunidad viajeros oaxaca, hotel eventos puerto escondido, clases surf puerto escondido, tours bioluminiscencia, hotel con actividades incluidas, punta cometa tours, ventanilla tours, hotel sustentable puerto escondido, experiencias auténticas oaxaca, hotel jóvenes puerto escondido, backpackers puerto escondido, hotel wifi gratis puerto escondido, habitaciones familiares puerto escondido, habitaciones baño privado puerto escondido, habitaciones baño compartido puerto escondido, mejor hotel puerto escondido, hotel recomendado puerto escondido, where to stay puerto escondido, puerto escondido accommodation, surfing hotel mexico, turtle release tours, bioluminescence tours mexico, dolphin watching puerto escondido, hostel puerto escondido, budget hotel puerto escondido, puerto escondido beach hotel, hotel playa zicatela, oaxaca coast hotel, mexican pacific coast hotel, eco friendly hotel oaxaca, sustainable tourism puerto escondido, adventure hotel mexico, cultural experiences oaxaca, hotel with activities puerto escondido, social hotel puerto escondido, community based tourism, authentic mexico experience, boutique hotel oaxaca coast, unique accommodation mexico, traveler community hotel, digital nomad friendly puerto escondido, coworking space hotel puerto escondido">
+  <meta name="author" content="Can Balam Hotel">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://canbalam.com.mx/">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Can Balam Hotel Puerto Escondido | Alojamiento Único en Oaxaca">
+  <meta property="og:description" content="Hotel boutique Can Balam en Puerto Escondido, Oaxaca. Actividades únicas: surf en Playa Zicatela, liberación de tortugas, bioluminiscencia, avistamiento de delfines, paellas catalanas y eco tours. Habitaciones cómodas y experiencias auténticas.">
+  <meta property="og:url" content="https://canbalam.com.mx/">
+  <meta property="og:site_name" content="Can Balam Hotel">
+  <meta property="og:image" content="https://canbalam.com.mx/MainBanner.webp">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:locale" content="es_MX">
+  
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Can Balam Hotel Puerto Escondido | Alojamiento Único en Oaxaca">
+  <meta name="twitter:description" content="Hotel boutique Can Balam en Puerto Escondido, Oaxaca. Habitaciones cómodas, actividades únicas como liberación de tortugas, surf, bioluminiscencia.">
+  <meta name="twitter:image" content="https://canbalam.com.mx/MainBanner.webp">
+  
+  <!-- Geo Meta Tags -->
+  <meta name="geo.region" content="MX-OAX">
+  <meta name="geo.placename" content="Puerto Escondido, Oaxaca">
+  <meta name="geo.position" content="15.8593;-97.0731">
+  <meta name="ICBM" content="15.8593, -97.0731">
+  
+  <!-- Favicons -->
+  <link rel="icon" href="/favicon.ico" sizes="32x32">
+  <link rel="apple-touch-icon" href="/favicon.ico">
+  
+  <!-- Preconnect to external domains -->
+  <link rel="preconnect" href="https://www.googletagmanager.com">
+  <link rel="preconnect" href="https://www.google-analytics.com">
+  
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Hotel",
+    "name": "Can Balam Hotel",
+    "description": "Can Balam Hotel boutique en Puerto Escondido, Oaxaca. Hotel único con experiencias auténticas: surf en Playa Zicatela, liberación de tortugas, bioluminiscencia, avistamiento de delfines, paellas catalano-oaxaqueñas, eco tours a Mazunte y Zipolite, cabalgatas al atardecer y yate en Huatulco. Habitaciones familiares, dobles con baño privado y compartido. Cocina compartida, roof top con vista al mar y ambiente de comunidad internacional.",
+    "url": "https://canbalam.com.mx",
+    "telephone": "+34638379254",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Puerto Escondido",
+      "addressLocality": "Puerto Escondido",
+      "addressRegion": "Oaxaca",
+      "addressCountry": "MX"
+    },
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": "15.8593",
+      "longitude": "-97.0731"
+    },
+    "image": "https://canbalam.com.mx/MainBanner.webp",
+    "priceRange": "$$",
+    "amenityFeature": [
+      {
+        "@type": "LocationFeatureSpecification",
+        "name": "WiFi gratuito"
+      },
+      {
+        "@type": "LocationFeatureSpecification", 
+        "name": "Clases y actividades de surf en Playa Zicatela"
+      },
+      {
+        "@type": "LocationFeatureSpecification",
+        "name": "Tours de bioluminiscencia nocturna"
+      },
+      {
+        "@type": "LocationFeatureSpecification",
+        "name": "Liberación de tortugas marinas"
+      },
+      {
+        "@type": "LocationFeatureSpecification",
+        "name": "Avistamiento de delfines al amanecer"
+      },
+      {
+        "@type": "LocationFeatureSpecification",
+        "name": "Eventos de paellas catalano-oaxaqueñas"
+      },
+      {
+        "@type": "LocationFeatureSpecification",
+        "name": "Eco tours a Mazunte, Zipolite y Punta Cometa"
+      },
+      {
+        "@type": "LocationFeatureSpecification",
+        "name": "Cabalgatas al atardecer en la playa"
+      },
+      {
+        "@type": "LocationFeatureSpecification",
+        "name": "Salidas en yate por las bahías de Huatulco"
+      },
+      {
+        "@type": "LocationFeatureSpecification",
+        "name": "Cocina compartida completamente equipada"
+      },
+      {
+        "@type": "LocationFeatureSpecification",
+        "name": "Roof top con vista al mar"
+      },
+      {
+        "@type": "LocationFeatureSpecification",
+        "name": "Área común y hall social"
+      },
+      {
+        "@type": "LocationFeatureSpecification",
+        "name": "Habitaciones familiares hasta 4 personas"
+      },
+      {
+        "@type": "LocationFeatureSpecification",
+        "name": "Habitaciones dobles con baño privado"
+      },
+      {
+        "@type": "LocationFeatureSpecification",
+        "name": "Habitaciones dobles con baño compartido"
+      },
+      {
+        "@type": "LocationFeatureSpecification",
+        "name": "Ambiente de comunidad internacional"
+      },
+      {
+        "@type": "LocationFeatureSpecification",
+        "name": "Networking y experiencias compartidas"
+      },
+      {
+        "@type": "LocationFeatureSpecification",
+        "name": "Ubicación a 12 minutos andando de Playa Zicatela"
+      }
+    ],
+    "aggregateRating": {
+      "@type": "AggregateRating",
+      "ratingValue": "4.8",
+      "reviewCount": "25"
+    }
+  }
+  </script>
 </head>
 
 <body>
